@@ -182,7 +182,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="3.2.6"
+       version="3.2.7"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
